add fetch and register dsl to registry

--- a/docker.rc
+++ b/docker.rc
@@ -234,3 +234,5 @@ function dkgcr(){
 ## container access Mac host
 # docker.for.mac.host.internal
 
+# docker network create --driver bridge postgres-network
+# docker volume create pgdata
