--- a/nginx/conf/conf.d/default.conf
+++ b/nginx/conf/conf.d/default.conf
@@ -1,9 +1,16 @@
 server {
-    listen       80;
-    server_name  localhost;
+    listen 80;
+    listen 443 ssl;
+    #listen 443 ssl http2;
+    #listen [::]:443 ssl http2;
+    server_name localhost;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
+
+    ssl_certificate /certs/test/localhost.crt;
+    ssl_certificate_key /certs/test/localhost.key;
+    ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
 
     location / {
         root   /usr/share/nginx/html;
