try cert with nginx and curl

--- a/nginx/conf/conf.d/default.conf
+++ b/nginx/conf/conf.d/default.conf
@@ -8,8 +8,8 @@ server {
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
 
-    ssl_certificate /certs/test/localhost.crt;
-    ssl_certificate_key /certs/test/localhost.key;
+    ssl_certificate /certs/localtest/localhost.crt;
+    ssl_certificate_key /certs/localtest/localhost.key;
     ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
 
     location / {
