--- a/nginx/k8s/deploy.yml
+++ b/nginx/k8s/deploy.yml
@@ -1,9 +1,10 @@
-apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
+  # namespace: try
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: nginx
@@ -14,6 +15,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.7.9
+        image: nginx:1.15.7-alpine
         ports:
         - containerPort: 80
