--- a/k8s/ingress/service-nodeport.yaml
+++ b/k8s/ingress/service-nodeport.yaml
@@ -7,21 +7,18 @@ metadata:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
 spec:
-  type: NodePort
+  #type: NodePort
   ports:
     - name: http
       port: 80
       targetPort: 80
       protocol: TCP
-      nodePort: 30080
+      #nodePort: 80
     - name: https
       port: 443
       targetPort: 443
       protocol: TCP
-      nodePort: 30443
+      #nodePort: 443
   selector:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
-
----
-
